# cytokine-mil

./: .gitignore  CLAUDE.md  Oelen_experiment.md  pseudo_tubes_creation.ipynb  pyproject.toml  session_report.tex
cascade_forge/: EXPERIMENT_SUMMARY.md  LARGE_EXPERIMENT_PLAN.md  README.md  pyproject.toml
cascade_forge/examples/: quickstart.py
cascade_forge/src/cascade_forge/: __init__.py  build.py  dynamics.py  expression.py  graph.py
cascade_forge/tests/: conftest.py  test_build.py  test_dynamics.py  test_end_to_end_cascadir.py  test_expression.py  test_graph.py
cascadir/: MANUAL.md  README.md  pyproject.toml
cascadir/examples/: full_experiment.py  quickstart.py  synthetic_data.py
cascadir/examples/analysis/: analysis.ipynb  make_notebook.py  oesinghaus_per_axis.csv
cascadir/examples/steps/: 01_validate.py  02_preprocess.py  03_build_pseudotubes.py  04_train_encoder.py  05_path_a_coupling.py  06_bridge_signatures.py  07_path_b_direction.py  08_signature_coupling.py  README.md  _common.py
cascadir/src/cascadir/: __init__.py  analysis.py  config.py  coupling.py  cross_asym.py  dynamics.py  exceptions.py  pipeline.py  preprocess.py  progression.py  pseudotubes.py  signature_coupling.py  signatures.py  train.py  types.py  validate.py
cascadir/src/cascadir/models/: __init__.py  abmil.py  attention.py  bag_classifier.py  instance_encoder.py
cascadir/tests/: conftest.py  test_analysis.py  test_coupling.py  test_cross_asym.py  test_dynamics.py  test_embedding_cache.py  test_pipeline.py  test_preprocess.py  test_progression.py  test_pseudotubes.py  test_signature_coupling.py  test_signatures.py  test_validate.py
configs/: default.yaml  sheu2024.yaml
cytokine_mil/: __init__.py  experiment_setup.py
hypotheses/: recurrent_training_dynamics_IG.md
notebooks/: Oelen_1st.ipynb  experiment.ipynb  experiment_binary.ipynb  experiment_bootstrap.ipynb  experiment_stage3_ca.ipynb  experiment_subset.ipynb  experiment_v2_two_layer_attention.ipynb  inspect_oelen_sa_ca_results.ipynb  inspect_stage2-sa_stage3-ca_results.ipynb  inspect_stage3_ca_results.ipynb  plot_ensemble_comparison.py  preprocess_tubes.ipynb
report/: full_report.tex
reports/: SESSION_SUMMARY_2026-05-25.md  SESSION_SUMMARY_2026-05-26.md  SESSION_SUMMARY_2026-05-30.md  SESSION_SUMMARY_2026-05-31.md  audit_2026-05-20.md  pipeline_a_b_full19_diagnosis.md  session_summary.tex  sheu2024_overnight_summary.md
scripts/: _analyze_pipeline_components.py  _inspect_oesinghaus.py  _inspect_sheu_timepoints.py  _probe_sheu.py  _write_audit_decisions.py  aggregate_ensemble.py  aggregate_geo_ensemble.py  aggregate_geo_offset1.py  aggregate_geo_synthetic.py  aggregate_large_cascade.py  analytical_scramble_correction.py  analyze_attention_dynamics.py  analyze_cell_type_ablation.py  analyze_cell_type_ablation.slurm  analyze_centroid_trajectory.py  analyze_centroid_trajectory.slurm  analyze_confusion_dynamics.py  analyze_confusion_matrix.py  analyze_confusion_matrix.slurm  analyze_coupling_donor_count.py  analyze_covid_progression.py  analyze_early_rise_cascade_forge.py  analyze_epoch_asymmetry.py  analyze_epoch_asymmetry.slurm  analyze_gene_learning_order.py  analyze_inner_product_results.py  analyze_latent_geometry_seeds.py  analyze_learnability.py  analyze_loss_dynamics_cascade_forge.py  analyze_method1_geo_trajectory.py  analyze_method2_attention_trajectory.py  analyze_method3_trajectory_stability.py  analyze_method5_joint.py  (+190 more)
(+352 files in other folders)
