[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cytokine-mil"
version = "0.1.0"
description = "Systemic mapping of cytokine signaling cascades via MIL dynamics"
dependencies = [
    "torch>=2.0",
    "scanpy>=1.9",
    "anndata>=0.9",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "jupyter>=1.0", "ipykernel>=6.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cytokine_mil*"]
