[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cascadir"
version = "0.1.1"
description = "Cascade-direction inference from a single-cell snapshot via cross-engagement asymmetry (cross_asym)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yam Arieli" }]
keywords = [
    "single-cell",
    "cytokine",
    "signaling-cascade",
    "multiple-instance-learning",
    "integrated-gradients",
    "transcriptomics",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "torch>=2.0",
    "scanpy>=1.9",
    "anndata>=0.9",
    # Required by the default HVG flavor 'seurat_v3' (scanpy uses skmisc.loess).
    # If your platform has no wheel, you can drop this and pass flavor='seurat'.
    "scikit-misc>=0.1.4",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/Yam-Arieli/cytokine-mil"
Source = "https://github.com/Yam-Arieli/cytokine-mil/tree/main/cascadir"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cascadir = ["py.typed"]
